# nccl_deviceapi_bench

./: .gitignore  CMakeLists.txt  README.md
scripts/: run_allgather_gin_deviceapi_4n.sh  run_barrier_4n.sh  run_bcast_multimem_8way_single_node.sh  run_bcast_multimem_single_node.sh  run_nccl_gin_pingpong_sweep.sh  run_waitsignal.sh
src/: allgather_gin_deviceapi_perf.cu  barrier_test.cu  bcast_multimem_test.cu  nccl_gin_pingpong_perf.cu  waitsignal_perf.cu
src/coll/: all_gather_gin.cuh  all_gather_gin_oneshot_rail.cuh
src/common/: checks.hpp  csv.hpp  env.hpp  mpi.hpp  parse.hpp  socket.hpp  stats.hpp  sweep.hpp  symk.hpp  timer.cuh
test/: allgather_gin_deviceapi_perf.cu  barrier_test.cu  bcast_multimem_test.cu  gin_proxy_phase_breakdown.cu  gin_put_signal_phase_breakdown.cu  gin_put_signal_pingpong_paper.cu  gin_put_signal_visibility.cu  nccl_gin_multipeer_pingpong_perf.cu  nccl_gin_negzero_pingpong_perf.cu  nccl_gin_pingpong_perf.cu  nccl_gin_pingpong_socket_perf.cu  nccl_gin_write_bw_perf.cu  nccl_gin_write_bw_socket_perf.cu  symm_semantics_perf.cu  waitsignal_perf.cu
